--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-body { font-family: Tahoma,sans-serif; margin:0; background:#f9f9f9; }
+body { font-family: Tahoma, sans-serif; margin:0; background:#f9f9f9; }
 
 /* الهيدر */
 header {
@@ -19,7 +19,15 @@ header {
   top: 0;
   z-index: 1000;
 }
-.header-buttons { margin-top: 10px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
+
+/* أزرار الهيدر */
+.header-buttons {
+  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
 .header-buttons button {
   background: #ffd814;
   border: 1px solid #fcd200;
@@ -29,6 +37,20 @@ header {
   font-weight: bold;
 }
 .header-buttons button:hover { background: #f7ca00; }
+
+/* عداد السلة */
+#cart-count {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: red;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
 
 /* زر الجرس */
 #notifBtn {
@@ -65,20 +87,6 @@ header {
   font-weight: bold;
 }
 
-/* عداد السلة */
-#cart-count {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background: red;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
-
 /* مربع البحث */
 #searchBox {
   display: block;
@@ -92,41 +100,34 @@ header {
   box-shadow: 0 1px 4px rgba(0,0,0,0.1);
 }
 
-/* منتجات على شكل كروت أمازون */
+/* شبكة المنتجات */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 12px;
   padding: 15px;
 }
 .product {
-  background: #fff;
+  border: 1px solid #ccc;
   border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  transition: 0.3s;
-}
-.product:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
-.product img {
-  width: 100%;
-  height: 150px;
-  object-fit: contain;
-  background: #f9f9f9;
-}
-.product-info {
   padding: 10px;
   text-align: center;
+  background: #fff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: 0.3s;
 }
-.product-info .name { font-size: 16px; margin-bottom: 5px; color: #333; font-weight: bold; }
-.product-info .price { font-size: 14px; color: #8a2be2; margin-bottom: 8px; }
-.product input {
-  width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center;
+.product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+.product img {
+  width: 100%;
+  height: 120px;
+  object-fit: contain;
+  margin-bottom: 8px;
 }
+.name { font-size: 16px; margin: 5px 0; color: #333; }
+.price { font-weight: bold; margin-bottom: 5px; }
+.product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
 .product button {
-  padding: 8px 10px;
+  padding: 5px 10px;
   border: none;
   border-radius: 5px;
   background: #8a2be2;
@@ -149,12 +150,16 @@ header {
   box-shadow: 0 3px 15px rgba(0,0,0,0.3);
   text-align: center;
   z-index: 1002;
-  width: 95%;
+  width: 90%;
   max-width: 500px;
-  max-height: 85%;
+  max-height: 80%;
   overflow-y: auto;
 }
-#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
+#totalModal h2 {
+  font-size: 20px;
+  margin-bottom: 15px;
+  color: #8a2be2;
+}
 #totalModal button {
   margin: 5px;
   padding: 8px 15px;
@@ -168,29 +173,50 @@ header {
 }
 #totalModal button:hover { background: #6a1fbf; }
 
-/* قائمة السلة */
-#cartList { text-align: right; margin-bottom: 10px; }
+/* كروت الفاتورة */
 .cart-item {
+  display: grid;
+  grid-template-columns: 80px 1fr;
+  gap: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 10px;
+  background: #fff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+.cart-item img {
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
+  border-radius: 8px;
+}
+.cart-item-details {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #ccc;
-  padding: 5px 0;
-  flex-wrap: wrap;
 }
-.cart-item span { margin: 0 5px; min-width: 60px; word-break: break-word; }
-.cart-item button { padding: 2px 8px; font-size: 14px; }
-
-/* الأرقام تحت بعض */
-#orderNumbers a {
-  display: block;
-  margin: 5px 0;
-  font-size: 16px;
-  color: #8a2be2;
+.cart-item-details span { margin: 3px 0; font-size: 14px; }
+.cart-item-details input {
+  width: 50px;
+  margin-top: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  text-align: center;
+}
+.cart-item-details button {
+  margin-top: 5px;
+  padding: 5px 10px;
+  font-size: 14px;
+  border: none;
+  border-radius: 5px;
+  background: #8a2be2;
+  color: #fff;
+  cursor: pointer;
   font-weight: bold;
-  text-decoration: none;
+  transition: 0.3s;
 }
-#orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
+.cart-item-details button:hover { background: #6a1fbf; }
 
 /* Toast */
 #toast {
@@ -205,11 +231,9 @@ header {
   z-index: 1003;
 }
 
-/* تحسين الموبايل */
-@media (max-width: 600px){
-  #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
-  .product img { height: 120px; }
-}
+/* روابط واتساب */
+#orderNumbers a { display:block; margin:5px 0; font-size:16px; color:#8a2be2; font-weight:bold; text-decoration:none; }
+#orderNumbers a:hover { color:#6a1fbf; text-decoration:underline; }
 </style>
 </head>
 <body>
@@ -257,12 +281,10 @@ function renderProducts(data){
       const item = data[i];
       html += `<div class="product">
                   <img src="${item.image || 'https://via.placeholder.com/150'}">
-                  <div class="product-info">
-                    <div class="name">${item.name}</div>
-                    <div class="price">${item.price} جنيه</div>
-                    <input type="number" min="1" value="1" data-index="${i}">
-                    <button onclick="addToCart(${i})">أضف إلى السلة</button>
-                  </div>
+                  <div class="name">${item.name}</div>
+                  <div class="price">السعر: ${item.price} جنيه</div>
+                  <input type="number" min="1" value="1" data-index="${i}">
+                  <button onclick="addToCart(${i})">أضف إلى السلة</button>
                </div>`;
   }
   container.innerHTML = html;
@@ -313,16 +335,22 @@ function showTotal(){
   cartList.innerHTML="";
   cart.forEach((qty,idx)=>{
     if(qty){
-      const price = productsData[idx].price;
-      const lineTotal = qty*price;
-      total+=lineTotal;
-      const div=document.createElement("div");
+      const item = productsData[idx];
+      const lineTotal = qty*item.price;
+      total += lineTotal;
+
+      const div = document.createElement("div");
       div.className="cart-item";
-      div.innerHTML=`<span>${productsData[idx].name}</span>
-                     <span>الكمية: <input type="number" min="1" value="${qty}" style="width:50px;" onchange="updateQty(${idx},this.value)"></span>
-                     <span>السعر: ${price}</span>
-                     <span>الإجمالي: ${lineTotal}</span>
-                     <button onclick="removeItem(${idx})">حذف</button>`;
+      div.innerHTML=`
+        <img src="${item.image || 'https://via.placeholder.com/150'}">
+        <div class="cart-item-details">
+          <span><strong>${item.name}</strong></span>
+          <span>الكمية: <input type="number" min="1" value="${qty}" onchange="updateQty(${idx},this.value)"></span>
+          <span>السعر: ${item.price} جنيه</span>
+          <span>الإجمالي: ${lineTotal} جنيه</span>
+          <button onclick="removeItem(${idx})">حذف</button>
+        </div>
+      `;
       cartList.appendChild(div);
     }
   });
@@ -334,32 +362,39 @@ function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[i
 function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
+// إرسال الطلب بالواتساب مع تنسيق كروت
 document.getElementById("sendBtn").onclick = function(){
   const orderDiv = document.getElementById("orderNumbers");
   orderDiv.style.display="block";
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick=(e)=>{
       e.preventDefault();
-      let text="🧾 طلبية جديدة\n\n";
+      let text="🧾 *طلبية جديدة*%0A%0A";
+      text+="📦 المنتج | 🔢 الكمية | 💵 السعر | 📊 الإجمالي%0A";
+      text+="--------------------------------%0A";
       let total=0;
-      cart.forEach((qty,idx)=>{
+      cart.forEach((qty, idx)=>{
         if(qty){
-          const price=productsData[idx].price;
-          const lineTotal=qty*price;
+          const item=productsData[idx];
+          const lineTotal = qty*item.price;
           total+=lineTotal;
-          text+=`${productsData[idx].name} | ${qty} | ${price} | ${lineTotal}\n`;
+          text+=`${item.name} |
+                    text+=`${item.name} | ${qty} | ${item.price} | ${lineTotal} جنيه%0A`;
         }
       });
-      text+=`المجموع الكلي: ${total} جنيه`;
-      window.open(`${a.href}?text=${encodeURIComponent(text)}`,"_blank");
+      text+="--------------------------------%0A";
+      text+=`💰 المجموع الكلي: ${total} جنيه`;
+      window.open(`${a.href}?text=${text}`, "_blank");
     }
   });
 }
 
-document.getElementById("cartBtn").onclick=showTotal;
-document.getElementById("totalBtn").onclick=showTotal;
-document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
+// أزرار الهيدر
+document.getElementById("cartBtn").onclick = showTotal;
+document.getElementById("totalBtn").onclick = showTotal;
+document.getElementById("supportBtn").onclick = ()=>window.open("https://wa.me/201022495795","_blank");
 
+// إشعارات المنتجات الجديدة
 function checkNewProducts(){
   const today=(new Date()).toISOString().split("T")[0];
   let newCount=0;
@@ -374,11 +409,13 @@ function checkNewProducts(){
   }
 }
 
+// البحث
 document.getElementById("searchBox").addEventListener("input", function(){
   const keyword=this.value.trim().toLowerCase();
   const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
   renderProducts(filtered);
 });
 </script>
+
 </body>
 </html>
