--- a/products.html
+++ b/products.html
@@ -19,8 +19,15 @@ header {
   top: 0;
   z-index: 1000;
 }
-.header-buttons { display: flex; flex-wrap: wrap; justify-content: center; gap:5px; margin-top:10px; }
+.header-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap:5px;
+  margin-top:10px;
+}
 .header-buttons button {
+  position: relative;
   background: #ffd814;
   border: 1px solid #fcd200;
   padding: 6px 12px;
@@ -28,134 +35,238 @@ header {
   cursor: pointer;
   font-weight: bold;
 }
-.header-buttons button:hover { background: #f7ca00; position: relative; }
-#notif-count { position: absolute; top: -8px; right: -8px; background: yellow; color: black; font-size:12px; font-weight:bold; padding:2px 6px; border-radius:50%; display:none; }
+.header-buttons button:hover { background: #f7ca00; }
+
+/* العداد الأحمر فوق السلة */
+#cartBtn #cart-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: red;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
+
+/* زر الجرس */
+#notifBtn #notif-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: yellow;
+  color: black;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
 
 /* بانر المنتج الجديد */
-#newBanner { display:none; background:red; color:white; text-align:center; padding:10px; font-size:20px; font-weight:bold; }
+#newBanner {
+  display: none;
+  background: red;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
 
 /* مربع البحث */
-#searchBox { display:block; margin:15px auto; padding:10px; width:90%; max-width:400px; border-radius:8px; border:1px solid #ccc; font-size:16px; box-shadow:0 1px 4px rgba(0,0,0,0.1); }
+#searchBox {
+  display: block;
+  margin: 15px auto;
+  padding: 10px;
+  width: 90%;
+  max-width: 400px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+}
 
 /* شبكة المنتجات */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  gap: 12px;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 15px;
   padding: 15px;
 }
 .product {
-  border: 1px solid #ccc;
+  background: #fff;
   border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: 0.3s;
+}
+.product:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
+.product img {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+  background: #f9f9f9;
+}
+.product-info {
   padding: 10px;
   text-align: center;
-  background: #fff;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  transition:0.3s;
 }
-.product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
-.product img { width:100%; height:120px; object-fit:contain; margin-bottom:8px; }
-.name { font-size:16px; margin:5px 0; color:#333; }
-.price { font-weight:bold; margin-bottom:5px; }
-.product input { width:50px; margin:5px 0; border-radius:5px; border:1px solid #ccc; text-align:center; }
+.product-info .name { font-size: 16px; margin-bottom: 5px; color: #333; font-weight: bold; }
+.product-info .price { font-size: 14px; color: #8a2be2; margin-bottom: 8px; }
+.product input {
+  width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center;
+}
 .product button {
-  padding:5px 10px;
-  border:none;
-  border-radius:5px;
-  background:#8a2be2;
-  color:#fff;
-  cursor:pointer;
-  font-weight:bold;
-  transition:0.3s;
+  padding: 8px 10px;
+  border: none;
+  border-radius: 5px;
+  background: #8a2be2;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
 }
-.product button:hover { background:#6a1fbf; transform: scale(1.05); }
+.product button:hover { background: #6a1fbf; transform: scale(1.05); }
 
 /* نافذة إجمالي الفاتورة */
 #totalModal {
-  display:none;
+  display: none;
   position: fixed;
-  top:50%; left:50%;
-  transform:translate(-50%,-50%);
-  background:#fff;
-  padding:20px;
-  border-radius:15px;
-  box-shadow:0 3px 15px rgba(0,0,0,0.3);
-  text-align:center;
-  z-index:1002;
-  width:90%;
-  max-width:400px;
-  max-height:80%;
-  overflow-y:auto;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+  background: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 3px 15px rgba(0,0,0,0.3);
+  text-align: center;
+  z-index: 1002;
+  width: 95%;
+  max-width: 500px;
+  max-height: 85%;
+  overflow-y: auto;
 }
-#totalModal h2 { font-size:20px; margin-bottom:15px; color:#8a2be2; }
-#totalModal button { margin:5px; padding:8px 15px; border:none; border-radius:10px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
-#totalModal button:hover { background:#6a1fbf; }
+#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
+#totalModal button {
+  margin: 5px;
+  padding: 8px 15px;
+  border: none;
+  border-radius: 10px;
+  background: #8a2be2;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+#totalModal button:hover { background: #6a1fbf; }
 
 /* قائمة السلة */
-#cartList { text-align:right; margin-bottom:10px; }
-.cart-item { display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #ccc; padding:5px 0; flex-wrap:wrap; }
-.cart-item span { margin:0 5px; }
-.cart-item button { padding:2px 8px; font-size:14px; margin-top:5px; }
+#cartList { text-align: right; margin-bottom: 10px; }
+.cart-item {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #ccc;
+  padding: 5px 0;
+}
+.cart-item .item-row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+.cart-item input { width: 50px; }
+.cart-item button { align-self: flex-start; margin-top: 5px; padding: 3px 8px; font-size: 14px; }
+
+/* الأرقام تحت بعض */
+#orderNumbers a {
+  display: block;
+  margin: 5px 0;
+  font-size: 16px;
+  color: #8a2be2;
+  font-weight: bold;
+  text-decoration: none;
+}
+#orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
 
 /* Toast */
-#toast { position:fixed; bottom:20px; right:20px; background:#25d366; color:#fff; padding:10px 20px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.3); display:none; z-index:1003; }
+#toast {
+  position: fixed;
+  bottom: 20px; right: 20px;
+  background: #25d366;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  display: none;
+  z-index: 1003;
+}
+
+/* تحسين الموبايل */
+@media (max-width: 600px){
+  #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
+  .product img { height: 120px; }
+}
 </style>
 </head>
 <body>
 
 <header>
-📦 جميع منتجات جنة
-<div class="header-buttons">
-  <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
-  <button id="totalBtn">💰 إجمالي الفاتورة</button>
-  <button id="supportBtn">☎️ الدعم الفني</button>
-  <button onclick="window.location.href='index.html'">🔙 الرئيسية</button>
-  <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
-</div>
-<input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
+  📦 جميع منتجات جنة
+  <div class="header-buttons">
+    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
+    <button id="totalBtn">💰 إجمالي الفاتورة</button>
+    <button id="supportBtn">☎️ الدعم الفني</button>
+    <button onclick="window.location.href='index.html'">🔙 الرئيسية</button>
+    <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
+  </div>
+  <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
 </header>
 
 <div id="newBanner">🎉 منتجات جديدة اليوم!</div>
 <div id="products-container"></div>
 
 <div id="totalModal">
-<h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
-<div id="cartList"></div>
-<button id="sendBtn">📤 إرسال عبر واتساب</button>
-<button onclick="closeTotalModal()">❌ إغلاق</button>
-<div id="orderNumbers" style="margin-top:10px; display:none;">
-  <p>اختر رقم لإرسال الطلب 👇</p>
-  <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
-  <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
-  <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
-</div>
+  <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+  <div id="cartList"></div>
+  <button id="sendBtn">📤 إرسال عبر واتساب</button>
+  <button onclick="closeTotalModal()">❌ إغلاق</button>
+  <div id="orderNumbers" style="margin-top:10px; display:none;">
+    <p>اختر رقم لإرسال الطلب 👇</p>
+    <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
+    <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
+    <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
+  </div>
 </div>
 
 <div id="toast">تمت الإضافة إلى السلة</div>
 
-<script>
+<script defer>
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
 let cart = [];
 
-// عرض المنتجات
 function renderProducts(data){
   let html = "";
   for(let i=0;i<data.length;i++){
       const item = data[i];
       html += `<div class="product">
                   <img src="${item.image || 'https://via.placeholder.com/150'}">
-                  <div class="name">${item.name}</div>
-                  <div class="price">السعر: ${item.price} جنيه</div>
-                  <input type="number" min="1" value="1" data-index="${i}">
-                  <button onclick="addToCart(${i})">أضف إلى السلة</button>
+                  <div class="product-info">
+                    <div class="name">${item.name}</div>
+                    <div class="price">${item.price} جنيه</div>
+                    <input type="number" min="1" value="1" data-index="${i}">
+                    <button onclick="addToCart(${i})">أضف إلى السلة</button>
+                  </div>
                </div>`;
   }
   container.innerHTML = html;
 }
 
-// تحميل المنتجات
 (async function(){
    if(localStorage.getItem("products")){
       productsData = JSON.parse(localStorage.getItem("products"));
@@ -167,6 +278,7 @@ function renderProducts(data){
      productsData = data.reverse();
      localStorage.setItem("products", JSON.stringify(productsData));
      renderProducts(productsData);
+     setTimeout(checkNewProducts, 1500);
    } catch(err){ console.log("❌ خطأ في جلب المنتجات:",err); }
 })();
 
@@ -199,29 +311,27 @@ function showTotal(){
   cartList.innerHTML="";
   cart.forEach((qty,idx)=>{
     if(qty){
+      const price = productsData[idx].price;
+      const lineTotal = qty*price;
+      total+=lineTotal;
       const div=document.createElement("div");
       div.className="cart-item";
-      const item = productsData[idx];
-      const lineTotal = qty*item.price;
-      total += lineTotal;
-      div.innerHTML = `<span>${item.name}</span>
-        <span>الكمية: <input type="number" min="1" value="${qty}" onchange="updateQty(${idx},this.value)" style="width:40px;"></span>
-        <span>السعر: ${item.price} جنيه | المجموع: ${lineTotal} جنيه</span>
+      div.innerHTML=`
+        <div class="item-row">
+          <span>${productsData[idx].name}</span>
+          <span>الكمية: <input type="number" min="1" value="${qty}" onchange="updateQty(${idx},this.value)"></span>
+          <span>السعر: ${price}</span>
+          <span>الإجمالي: ${lineTotal}</span>
+        </div>
         <button onclick="removeItem(${idx})">حذف</button>`;
       cartList.appendChild(div);
     }
   });
-  document.getElementById("totalAmount").innerText = total;
+  document.getElementById("totalAmount").innerText=total;
   document.getElementById("totalModal").style.display="block";
 }
 
-function updateQty(idx,value){ 
-  value = parseInt(value); 
-  if(value<=0) delete cart[idx]; 
-  else cart[idx]=value; 
-  updateCartCount(); 
-  showTotal(); 
-}
+function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal(); }
 function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
@@ -231,37 +341,45 @@ document.getElementById("sendBtn").onclick = function(){
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick=(e)=>{
       e.preventDefault();
-      let text="🧾 *طلبية جديدة* %0A%0A";
-      text+="📦 المنتج | 🔢 الكمية | 💵 السعر | 📊 الإجمالي%0A";
-      text+="--------------------------------%0A";
+      let text="🧾 طلبية جديدة\n\n";
       let total=0;
-      cart.forEach((qty, idx)=>{
+      cart.forEach((qty,idx)=>{
         if(qty){
-          const item = productsData[idx];
-          const lineTotal = qty*item.price;
+          const price=productsData[idx].price;
+          const lineTotal=qty*price;
           total+=lineTotal;
-          text+=`${item.name} | ${qty} | ${item.price} | ${lineTotal}ج%0A`;
+          text+=`${productsData[idx].name} | ${qty} | ${price} | ${lineTotal}\n`;
         }
       });
-      text+="--------------------------------%0A";
-      text+=`✅ *المجموع الكلي:* *${total} جنيه*`;
-      window.open(`${a.href}?text=${text}`,"_blank");
+      text+=`المجموع الكلي: ${total} جنيه`;
+      window.open(`${a.href}?text=${encodeURIComponent(text)}`,"_blank");
     }
   });
 }
 
-// أزرار الهيدر
-document.getElementById("cartBtn").onclick = showTotal;
-document.getElementById("totalBtn").onclick = showTotal;
-document.getElementById("supportBtn").onclick = ()=>window.open("https://wa.me/201022495795","_blank");
+document.getElementById("cartBtn").onclick=showTotal;
+document.getElementById("totalBtn").onclick=showTotal;
+document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
 
-// البحث
+function checkNewProducts(){
+  const today=(new Date()).toISOString().split("T")[0];
+  let newCount=0;
+  productsData.forEach(p=>{ if(p.date&&p.date.startsWith(today)) newCount++; });
+  if(newCount>0){
+    document.getElementById("notif-count").innerText=newCount;
+    document.getElementById("notif-count").style.display="inline-block";
+    document.getElementById("newBanner").style.display="block";
+    let audio=new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3"); audio.play();
+    if(Notification.permission==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
+    else if(Notification.permission!=="denied") Notification.requestPermission().then(p=>{ if(p==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`); });
+  }
+}
+
 document.getElementById("searchBox").addEventListener("input", function(){
   const keyword=this.value.trim().toLowerCase();
   const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
   renderProducts(filtered);
 });
 </script>
-
 </body>
 </html>
