--- a/products.html
+++ b/products.html
@@ -89,41 +89,40 @@ header {
   box-shadow: 0 1px 4px rgba(0,0,0,0.1);
 }
 
-/* شبكة المنتجات */
+/* شبكة المنتجات - الكارت أكبر وأوضح */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
   padding: 15px;
 }
 .product {
   background: #fff;
-  border-radius: 10px;
+  border-radius: 12px;
   overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   transition: 0.3s;
 }
-.product:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
+.product:hover { box-shadow: 0 6px 18px rgba(0,0,0,0.3); }
 .product img {
   width: 100%;
-  height: 150px;
+  height: 180px;
   object-fit: contain;
   background: #f9f9f9;
 }
 .product-info {
-  padding: 10px;
+  padding: 12px;
   text-align: center;
 }
-.product-info .name { font-size: 16px; margin-bottom: 5px; color: #333; font-weight: bold; }
-.product-info .price { font-size: 14px; color: #8a2be2; margin-bottom: 8px; }
+.product-info .name { font-size: 18px; margin-bottom: 5px; color: #333; font-weight: bold; }
+.product-info .price { font-size: 16px; color: #8a2be2; margin-bottom: 10px; }
 .product input {
-  width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center;
+  width: 60px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center;
 }
 .product button {
-  padding: 8px 10px;
+  padding: 10px 12px;
   border: none;
   border-radius: 5px;
   background: #8a2be2;
@@ -151,7 +150,7 @@ header {
   max-height: 85%;
   overflow-y: auto;
 }
-#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
+#totalModal h2 { font-size: 22px; margin-bottom: 15px; color: #8a2be2; }
 #totalModal button {
   margin: 5px;
   padding: 8px 15px;
@@ -165,21 +164,24 @@ header {
 }
 #totalModal button:hover { background: #6a1fbf; }
 
-/* قائمة السلة */
+/* قائمة السلة - الفاتورة */
 #cartList { text-align: right; margin-bottom: 10px; }
 .cart-item {
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid #ccc;
   padding: 5px 0;
+  margin-bottom: 8px;
 }
 .cart-item .item-row {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 5px;
+  align-items: center;
+  flex-wrap: wrap;
+  gap:5px;
 }
-.cart-item input { width: 50px; }
-.cart-item button { align-self: flex-start; margin-top: 5px; padding: 3px 8px; font-size: 14px; }
+.cart-item input { width: 60px; }
+.cart-item button { align-self: flex-start; margin-top: 5px; padding: 4px 10px; font-size: 14px; }
 
 /* الأرقام تحت بعض */
 #orderNumbers a {
@@ -207,8 +209,8 @@ header {
 
 /* تحسين الموبايل */
 @media (max-width: 600px){
-  #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
-  .product img { height: 120px; }
+  #products-container { grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); }
+  .product img { height: 140px; }
 }
 </style>
 </head>
