--- a/products.html
+++ b/products.html
@@ -24,53 +24,30 @@ header {
   display: flex; 
   flex-wrap: wrap; 
   justify-content: center; 
-  gap:10px;
-  align-items: center;
+  gap:5px;
 }
 .header-buttons button {
   background: #ffd814;
   border: 1px solid #fcd200;
-  padding: 10px 18px;
-  border-radius: 8px;
+  padding: 8px 16px;
+  border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
   font-size: 16px;
-  position: relative;
 }
 .header-buttons button:hover { background: #f7ca00; }
 
-/* عداد السلة فوق السلة */
-#cartBtn #cart-count {
-  position: absolute;
-  top: -12px;
-  right: -10px;
-  background: red;
-  color: #fff;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
-
-/* زر الجرس وتحريكه */
-@keyframes shake {
-  0% { transform: rotate(0deg); }
-  25% { transform: rotate(20deg); }
-  50% { transform: rotate(-20deg); }
-  75% { transform: rotate(20deg); }
-  100% { transform: rotate(0deg); }
-}
-
+/* زر الجرس */
 #notifBtn {
   position: relative;
   background: #ff4444;
   border: 1px solid #cc0000;
-  padding: 10px 18px;
-  border-radius: 8px;
+  padding: 8px 16px;
+  border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
   color: #fff;
+  animation: ring 1.5s infinite;
 }
 #notif-count {
   position: absolute;
@@ -78,29 +55,24 @@ header {
   right: -8px;
   background: yellow;
   color: black;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
   padding: 2px 6px;
   border-radius: 50%;
   display: none;
 }
 
-/* زر صل على الحبيب */
-#loveBtn {
-  background: #ff69b4;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  padding: 10px 18px;
-  cursor: pointer;
-  font-weight: bold;
-  font-size: 16px;
-  margin-left:5px;
-  animation: bounce 1s infinite alternate;
-}
-@keyframes bounce {
-  from { transform: translateY(0); }
-  to { transform: translateY(-5px); }
+/* حركة الجرس */
+@keyframes ring {
+  0% { transform: rotate(0deg); }
+  1% { transform: rotate(15deg); }
+  3% { transform: rotate(-10deg); }
+  5% { transform: rotate(15deg); }
+  7% { transform: rotate(-10deg); }
+  9% { transform: rotate(15deg); }
+  11% { transform: rotate(-10deg); }
+  13% { transform: rotate(0deg); }
+  100% { transform: rotate(0deg); }
 }
 
 /* بانر المنتج الجديد */
@@ -112,6 +84,20 @@ header {
   padding: 10px;
   font-size: 20px;
   font-weight: bold;
+}
+
+/* عداد السلة */
+#cart-count {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: red;
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
 }
 
 /* مربع البحث */
@@ -161,7 +147,7 @@ header {
   width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center;
 }
 .product button {
-  padding: 10px; margin-top: 5px;
+  padding: 8px 10px;
   border: none;
   border-radius: 5px;
   background: #8a2be2;
@@ -179,33 +165,58 @@ header {
   top: 50%; left: 50%;
   transform: translate(-50%,-50%);
   background: #fff;
-  padding: 20px;
+  padding: 20px 25px;
   border-radius: 15px;
-  box-shadow: 0 3px 15px rgba(0,0,0,0.3);
+  box-shadow: 0 5px 20px rgba(0,0,0,0.3);
   text-align: center;
   z-index: 1002;
   width: 90%;
-  max-width: 600px;
+  max-width: 650px;
   max-height: 85%;
   overflow-y: auto;
+  font-size: 16px;
 }
 
 /* جدول الفاتورة */
-#cartList { text-align: right; margin-bottom: 10px; display: flex; flex-direction: column; gap: 10px; }
-.cart-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  border-bottom: 1px solid #ccc;
-  padding: 5px 0;
-  flex-wrap: wrap;
+#cartList-header {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr auto;
+  font-weight: bold;
+  margin-bottom: 5px;
+  text-align: center;
 }
-.cart-item span { margin: 3px 5px; min-width: 60px; word-break: break-word; }
-.cart-item .remove-btn { margin-top:5px; width:100%; }
+#cartList {
+  text-align: right;
+  margin: 10px 0;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr auto;
+  gap: 10px;
+  align-items: center;
+  background: #f5f5f5;
+  padding: 10px;
+  border-radius: 10px;
+}
+.cart-item {
+  display: contents;
+}
+.cart-item span {
+  padding: 5px 8px;
+  word-break: break-word;
+}
+.cart-item .remove-btn {
+  background: #ff4444;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin-top: 5px;
+}
+.cart-item .remove-btn:hover { background: #cc0000; }
 
 /* أزرار الفاتورة */
 #totalModal button {
-  margin: 5px;
+  margin: 10px 5px 0 5px;
   padding: 10px 18px;
   border: none;
   border-radius: 10px;
@@ -213,20 +224,10 @@ header {
   color: #fff;
   cursor: pointer;
   font-weight: bold;
+  font-size: 16px;
   transition: 0.3s;
 }
 #totalModal button:hover { background: #6a1fbf; }
-
-/* الأرقام تحت بعض */
-#orderNumbers a {
-  display: block;
-  margin: 5px 0;
-  font-size: 16px;
-  color: #8a2be2;
-  font-weight: bold;
-  text-decoration: none;
-}
-#orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
 
 /* Toast */
 #toast {
@@ -245,9 +246,10 @@ header {
 @media (max-width: 600px){
   #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
   .product img { height: 120px; }
-  #totalModal { width: 95%; padding: 15px; max-height: 90%; }
-  .cart-item { flex-direction: column; font-size: 14px; }
-  .cart-item span { margin: 3px 0; }
+  #totalModal { width: 95%; padding: 15px; max-height: 90%; font-size: 14px; }
+  #cartList, #cartList-header { grid-template-columns: 2fr 1fr 1fr 1fr auto; font-size: 14px; }
+  .cart-item span { padding: 3px 5px; }
+  .cart-item .remove-btn { padding: 4px 8px; font-size: 14px; }
   #totalModal button { font-size: 14px; padding: 8px 12px; }
 }
 </style>
@@ -261,8 +263,7 @@ header {
     <button id="totalBtn">💰 إجمالي الفاتورة</button>
     <button id="supportBtn">☎️ الدعم الفني</button>
     <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
-    <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
-    <button id="loveBtn">صل على الحبيب</button>
+    <button id="notifBtn">🔔 صل على الحبيب <span id="notif-count">0</span></button>
   </div>
   <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
 </header>
@@ -272,7 +273,17 @@ header {
 
 <div id="totalModal">
   <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+
+  <div id="cartList-header">
+    <span>المنتج</span>
+    <span>الكمية</span>
+    <span>السعر</span>
+    <span>الإجمالي</span>
+    <span>حذف</span>
+  </div>
+
   <div id="cartList"></div>
+
   <button id="sendBtn">📤 إرسال عبر واتساب</button>
   <button onclick="closeTotalModal()">❌ إغلاق</button>
   <div id="orderNumbers" style="margin-top:10px; display:none;">
@@ -289,7 +300,7 @@ header {
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
-let cart = JSON.parse(localStorage.getItem("cart")) || [];
+let cart = [];
 
 // عرض المنتجات
 function renderProducts(data){
@@ -301,7 +312,7 @@ function renderProducts(data){
                   <div class="product-info">
                     <div class="name">${item.name}</div>
                     <div class="price">${item.price} جنيه</div>
-                    <input type="number" min="1" value="${cart[i] || 1}" data-index="${i}">
+                    <input type="number" min="1" value="1" data-index="${i}">
                     <button onclick="addToCart(${i})">أضف إلى السلة</button>
                   </div>
                </div>`;
@@ -337,14 +348,13 @@ function updateCartCount(){
   const badge = document.getElementById("cart-count");
   badge.style.display = count>0?"inline-block":"none";
   badge.innerText = count;
-  localStorage.setItem("cart", JSON.stringify(cart));
 }
 
 function addToCart(index){
   const input = container.querySelector(`input[data-index='${index}']`);
   const quantity = parseInt(input.value);
   if(quantity<=0) return;
-  cart[index] = quantity;
+  cart[index] = (cart[index] || 0) + quantity;
   updateCartCount();
   showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
 }
@@ -364,7 +374,7 @@ function showTotal(){
                      <span>الكمية: <input type="number" min="1" value="${qty}" style="width:50px;" onchange="updateQty(${idx},this.value)"></span>
                      <span>السعر: ${price}</span>
                      <span>الإجمالي: ${lineTotal}</span>
-                     <button class="remove-btn" onclick="removeItem(${idx})">حذف</button>`;
+                     <span><button class="remove-btn" onclick="removeItem(${idx})">حذف</button></span>`;
       cartList.appendChild(div);
     }
   });
@@ -398,24 +408,19 @@ document.getElementById("sendBtn").onclick = function(){
   });
 }
 
-// الهيدر أزرار
 document.getElementById("cartBtn").onclick=showTotal;
 document.getElementById("totalBtn").onclick=showTotal;
 document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
-document.getElementById("loveBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
 
-// الجرس والمنتجات الجديدة
 function checkNewProducts(){
   const today=(new Date()).toISOString().split("T")[0];
   let newCount=0;
   productsData.forEach(p=>{ if(p.date&&p.date.startsWith(today)) newCount++; });
   if(newCount>0){
-    const notifBtn=document.getElementById("notifBtn");
     document.getElementById("notif-count").innerText=newCount;
     document.getElementById("notif-count").style.display="inline-block";
     document.getElementById("newBanner").style.display="block";
-    notifBtn.style.animation="shake 0.5s infinite";
-    let audio=new Audio("https://www.soundjay.com/button/beep-07.mp3"); audio.play();
+    let audio=new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3"); audio.play();
     if(Notification.permission==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
     else if(Notification.permission!=="denied") Notification.requestPermission().then(p=>{ if(p==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`); });
   }
@@ -426,9 +431,6 @@ document.getElementById("searchBox").addEventListener("input", function(){
   const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
   renderProducts(filtered);
 });
-
-// تحديث عداد السلة عند التحميل
-updateCartCount();
 </script>
 </body>
 </html>
